syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog{
      string id =1;
      string author_id =2;
      string title =3;
      string content =4;
}

message CreateBlogRequest{
    Blog blog= 1;
}

message CreateBlogResponse{
   string response = 1;
}

 message GetBlogRequest{
    string blogId = 1;
 }

 message GetBlogResponse{
     Blog blog = 1;
  }

 message UpdateBlogRequest{
       Blog blog = 1;
 }

 message UpdateBlogResponse{
       string response = 1;
 }

 message DeleteBlogRequest{
     string blogId = 1;
 }

 message DeleteBlogResponse{
    string response = 1;
 }

 message ListBlogRequest{

 }
message ListBlogResponse{
   Blog blog = 1;
}

service BlogService{
   rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse){};
   rpc GetBlogById(GetBlogRequest) returns(GetBlogResponse){};
   rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse){};
   rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse){};
   rpc ListAllBlog(ListBlogRequest) returns(stream ListBlogResponse){};
}